[package]
name = "windows_utils"
description = "Collection of programs for Windows"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "hardlock"
path = "src/hardlock.rs"

[[bin]]
name = "emptyrecyclebin"
path = "src/emptyrecyclebin.rs"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
